<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/t_pallet2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/form_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/form_title"
        android:src="@drawable/baseline_account_circle_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        />

    <EditText
        android:id="@+id/campo_user"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/icon"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:hint="@string/user"
        android:backgroundTint="@color/t_pallet4"
        />

    <EditText
        android:id="@+id/campo_password"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/campo_user"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:hint="@string/password"
        android:backgroundTint="@color/t_pallet4"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/campo_password"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:backgroundTint="@color/s_pallet2"
        app:cornerRadius="10dp"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/login"
        android:text="@string/register"
        android:backgroundTint="@color/s_pallet2"
        app:cornerRadius="10dp"
        />

    <Button
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="21dp"
        android:text="@string/forgot"
        android:backgroundTint="@color/s_pallet2"
        app:cornerRadius="10dp"
        />

    <ScrollView
        android:id="@+id/terms_scroll"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@id/forgot_password"
        android:layout_marginVertical="40dp"
        android:background="@color/t_pallet5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/terms_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/register"
                android:layout_marginTop="10dp"
                android:text="@string/terms_text"
                android:textColor="@color/black"
                android:textSize="17sp" />


        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/terms_scroll"
        android:text="@string/checkbox"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        />


</RelativeLayout>