<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/t_pallet2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_account_circle_24"
            android:layout_marginTop="20dp"
            android:layout_weight="0.3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_settings_24"
            android:layout_marginTop="20dp"
            android:layout_weight="0.3"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/s_pallet2"
            android:text="@string/category"
            app:cornerRadius="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/s_pallet2"
            android:text="@string/category"
            app:cornerRadius="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/s_pallet2"
            android:text="@string/category"
            app:cornerRadius="10dp"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/products"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_below="@+id/category"
        android:layout_marginTop="50dp"
        android:background="@color/t_pallet5">

        <LinearLayout
            android:id="@+id/linear_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/products_view"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="175dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/simpsons_grito"
                        />

                    <TextView
                        android:id="@+id/product_description"
                        android:layout_width="175dp"
                        android:layout_height="70dp"
                        android:layout_below="@+id/product_image"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:background="@color/t_pallet3"
                        android:text="@string/lorem_ipsum"
                        android:textColor="@color/black"
                        />

                    <Button
                        android:id="@+id/product_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/product_description"
                        android:layout_marginTop="20dp"
                        android:layout_centerHorizontal="true"
                        android:backgroundTint="@color/s_pallet2"
                        android:text="@string/buy"
                        app:cornerRadius="10dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/products_view2"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/product_image2"
                        android:layout_width="175dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/emoji_grito"
                        />

                    <TextView
                        android:id="@+id/product_description2"
                        android:layout_width="175dp"
                        android:layout_height="70dp"
                        android:layout_below="@+id/product_image2"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:background="@color/t_pallet3"
                        android:text="@string/lorem_ipsum"
                        android:textColor="@color/black"
                        />

                    <Button
                        android:id="@+id/product_buy2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/product_description2"
                        android:layout_marginTop="20dp"
                        android:layout_centerHorizontal="true"
                        android:backgroundTint="@color/s_pallet2"
                        android:text="@string/buy"
                        app:cornerRadius="10dp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/extra_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/products"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="15dp">

        <Button
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:backgroundTint="@color/t_pallet2"
            android:drawableTop="@drawable/baseline_share_24"
            android:text="@string/share"
            app:cornerRadius="0dp"
            />

        <Button
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/t_pallet2"
            android:drawableTop="@drawable/baseline_shopping_cart_24"
            android:text="@string/cart"
            app:cornerRadius="0dp"
            />

        <Button
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:backgroundTint="@color/t_pallet2"
            android:drawableTop="@drawable/baseline_chat_24"
            android:text="@string/chat"
            app:cornerRadius="0dp"
            />
    </LinearLayout>

</RelativeLayout>